<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0DFF6"
    tools:context=".QuizActivity">
    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1F6BB8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="@drawable/back_circle"
            tools:ignore="ContentDescription"/>
        <TextView
            android:id="@+id/selectedTopic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/selected_topic_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/questionsCounter"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_start"
        android:elevation="1dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/_1_10"
        android:textColor="#0D0E0E"
        app:layout_constraintTop_toBottomOf="@id/relative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:minHeight="100dp"
        android:orientation="vertical"
        android:background="@drawable/round_back_light_yellow"
        app:layout_constraintTop_toTopOf="@id/questionsCounter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/round_back"
            android:src="@drawable/java"
            tools:ignore="ContentDescription"/>
    <TextView
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/question_will_come_here"
        android:padding="20dp"
        android:textColor="#CC000000"
        android:textSize="16sp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/option_1"
        android:background="@drawable/round_option_white_stroke"
        app:layout_constraintTop_toBottomOf="@id/l1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/option_2"
        android:background="@drawable/round_option_white_stroke"
        app:layout_constraintTop_toBottomOf="@id/option1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/option_3"
        android:background="@drawable/round_option_white_stroke"
        app:layout_constraintTop_toBottomOf="@id/option2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/option_4"
        android:background="@drawable/round_option_white_stroke"
        app:layout_constraintTop_toBottomOf="@id/option3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/next"
        android:background="@drawable/round_start"
        android:textAllCaps="false"
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/option4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>