<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".QuizResult">
    <ImageView
        android:id="@+id/congratulation_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/congratulations"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription"/>
    <TextView
        android:id="@+id/successTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/congratulation_icon"
        android:text="@string/you_ve_successfully_completed_a_quiz"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/successTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/correctAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct_answer_0"
            android:textStyle="bold"
            android:textColor="#00C853"/>
        <TextView
            android:id="@+id/incorrectAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_answer_0"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="#DD2C00"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuiz"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/round_start"
        android:layout_margin="20dp"
        android:text="@string/start_new_quiz"
        android:textColor="#FFFFFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>